// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteWithLayout basic 1`] = `
<div>
  <div
    class="main flex"
    data-layout="default"
  >
    <div>
      Main nav
    </div>
    <div
      class="main sideNavExpanded newNav"
    >
      <div>
        <div>
          sidenav
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main subTitle"
            >
              SUBTITLE
            </p>
            <p
              class="StyledProps--font StyledProps--main title StyledProps--color StyledProps--color-white"
            >
              TITLE
            </p>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main sideNavResizeBtn collapse"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <span
              class="bp3-icon bp3-icon-symbol-triangle-up StyledProps--main triangle"
              icon="symbol-triangle-up"
              tabindex="0"
            >
              <svg
                data-icon="symbol-triangle-up"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  symbol-triangle-up
                </desc>
                <path
                  d="M12.89 11.56l-3.99-8h-.01c-.17-.32-.5-.55-.89-.55s-.72.23-.89.55H7.1l-4 8h.01c-.06.14-.11.29-.11.45 0 .55.45 1 1 1h8c.55 0 1-.45 1-1 0-.16-.05-.31-.11-.45z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="children"
      >
        <div>
          matched-route
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout empty 1`] = `
<div>
  <div
    class="main"
    data-layout="empty"
  >
    <div
      class="children"
    >
      <div>
        matched-route
      </div>
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout minimal 1`] = `
<div>
  <div
    class="main flex"
    data-layout="minimal"
  >
    <div>
      Main nav
    </div>
    <div
      class="rhs"
    >
      <div
        class="children"
      >
        <div>
          matched-route
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout that the license store will render the child if the license value is not present 1`] = `
<div>
  <div
    class="main flex"
    data-layout="default"
  >
    <div>
      Main nav
    </div>
    <div
      class="main sideNavExpanded newNav"
    >
      <div>
        <div>
          sidenav
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main subTitle"
            >
              SUBTITLE
            </p>
            <p
              class="StyledProps--font StyledProps--main title StyledProps--color StyledProps--color-white"
            >
              TITLE
            </p>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main sideNavResizeBtn collapse"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <span
              class="bp3-icon bp3-icon-symbol-triangle-up StyledProps--main triangle"
              icon="symbol-triangle-up"
              tabindex="0"
            >
              <svg
                data-icon="symbol-triangle-up"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  symbol-triangle-up
                </desc>
                <path
                  d="M12.89 11.56l-3.99-8h-.01c-.17-.32-.5-.55-.89-.55s-.72.23-.89.55H7.1l-4 8h.01c-.06.14-.11.29-.11.45 0 .55.45 1 1 1h8c.55 0 1-.45 1-1 0-.16-.05-.31-.11-.45z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="children"
      >
        <div>
          matched-route
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout that the license store will route to the CF trial page if the license has not started 1`] = `
<div>
  <div>
    <h1>
      Not Found
    </h1>
    <div
      data-testid="location"
    >
      /account/123/cf/home/trial
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout that the license store will route to the CI trial page if the license has not started 1`] = `
<div>
  <div>
    <h1>
      Not Found
    </h1>
    <div
      data-testid="location"
    >
      /account/123/ci/home/trial
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout that the license store will route to the subscriptions page if the trial is expired 1`] = `
<div>
  <div
    class="main flex"
    data-layout="default"
  >
    <div>
      Main nav
    </div>
    <div
      class="rhs"
    >
      <div
        class="children"
      >
        <div>
          matched-route
        </div>
      </div>
    </div>
  </div>
</div>
`;
